# kalkki

./: .env  .glfrc.json  .licensesrc.json  CHANGELOG.md  Dockerfile  LICENSE  LICENSE-ABICUS  README.md  app.html  biome.json  index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.json  vite.config.ts
.github/actions/: deploy.yml
.github/workflows/: deploy.yml  publish.yml
.husky/: pre-commit
public/: third-party-licenses.txt
src/: App.tsx  app.scss  app.tsx  functions.ts  index.css  main.tsx  pwa.ts  use-object-state.ts  util.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs
src/components/: AutoUpdate.tsx  HistoryLine.tsx  Logo.tsx  MathInput.tsx  SelfDestructButton.tsx  TopBar.tsx
src/lang/: de.ts  en.ts  fi.ts  index.ts  jp.ts  nl.ts  sv.ts
src/math/: documentation.ts  index.ts  latex-to-math.ts  math.test.ts  prettify.ts  syntax-highlighter.ts  syntax-highlighter.tsx  test.ts  worker.ts
src/math/internal/: evaluator.ts  functions.ts  large-number.ts  number.ts  tokeniser.ts  tokenizer.ts
src/pages/: About.tsx  Copyright.tsx
src/styles/: _auto-update.scss  _history.scss  _input.scss  _page.scss  _top-bar.scss  app.scss  index.css
src/styles/themes/: catpuccin.scss  dracula.scss  gruvbox.scss  speedcrunch.scss
src/test/: speedcrunch.test.ts
src/util/: index.ts  licenses.json  number-formatting.ts  themes.ts  use-object-state.ts
