[package]
name = "kalkki"
version = "0.0.0"
description = "An easy-to-use and fast scientific calculator"
authors = ["Roni Äikäs"]
license = "AGPLv3"
repository = "https://github.com/raikasdev/kalkki"
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.5", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.3.1", features = [] }
tauri-plugin-log = "2.0.0-rc"
tauri-plugin-opener = "2"
